# scrl_shtr

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/shooter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseObject.h  Bird.cpp  Bird.h  Bomber.cpp  Bomber.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  CMakeLists.txt  Fighter.cpp  Fighter.h  FontRenderer.cpp  FontRenderer.h  GameLogic.cpp  GameLogic.h  Hero.cpp  Hero.h  Model.h  Shader.cpp  Shader.h  TextureAsset.cpp  TextureAsset.h  main.cpp
app/src/main/java/com/example/shooter/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/shooter/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
